--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "fs": "^0.0.1-security",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "fs": "0.0.1-security",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -26,6 +26,6 @@
     "globals": "^15.11.0",
     "javascript-obfuscator": "^4.1.1",
     "tailwindcss": "^3.4.14",
-    "vite": "^5.4.9"
+    "vite": "^7.3.1"
   }
 }
